# symplectic-numerical-integration

./: README.md  pyproject.toml
src/symplectic_numerical_integration/: simpleNI.py
src/tests/: test_simpleNI.py
tests/: test_simpleNI.py
